--- a/sublime_text/install
+++ b/sublime_text/install
@@ -11,4 +11,8 @@ import urllib2,os; pf='Package Control.sublime-package'; ipp=sublime.installed_p
 Git
 GitGutter
 enhanced side bar
+MarkdownEditing
+Sublime Text 2/3 Markdown Preview
+SublimeCodeIntel
+DocBlockr
 
